<resources>
    <string name="app_name">FestHelp</string>
    <string name="test">Že 21. leto zapovrstjo Zveza študentskih klubov Slovenije (Zveza ŠKIS) pripravlja Škisovo tržnico, največjo kulturno-zabavno prireditev za mlade, ki temelji na promociji slovenske kulture in kulinarike, s pestrim popoldanskim ter večernim programom pa skrbi za dobro vzdušje in zabavo obiskovalcev.  57 študentskih klubov na tržnici predstavi svoje delovanje ter posebnosti in značilnosti kraja, iz katerega prihajajo.  V popoldanskem delu prireditve se obiskovalci lahko sprehodijo med klubskimi stojnicami ter spoznajo različne okuse in narečja Slovenije, se družijo in zabavajo ob odlični glasbi, predvsem pa občutijo utrip mladosti in študentskega aktivizma.  Škisova tržnica vsako leto gosti uveljavljena imena slovenske in tuje glasbene scene, priložnost pa dobijo tudi še neuveljavljene perspektivne glasbene skupine.  Pomemben del Škisove tržnice je njena mednarodna komponenta. Mladi predstavniki tujih držav so združeni na Mednarodnem otočku, kjer kulinarične dobrote in zanimivosti iz tujine predstavijo študenti iz zamejstva.  Z namenom promocije solidarnosti ter medsebojne pomoči organizatorji v kulturno-zabavno dogajanje vsako leto vnašajo dobrodelno noto. V želji po spodbujanju okoljske odgovornosti med mladimi so že pred leti pričeli tudi z ekološko usmeritvijo. Danes Škisova tržnica ni znana zgolj po svojem kulturnem in zabavnem konceptu, temveč tudi kot prva EKO prireditev za mlade v Sloveniji, ki s sprotnim ločevanjem, stiskanjem in odvažanjem odpadkov ohranja prizorišče čisto.  Prireditev se je od svoje prve upodobitve pojavila na več lokacijah po Ljubljani. Letos bodo študentski klubi svoje stojnice postavili v mesecu maju, na travnati zelenici Kardeljeve ploščadi za Bežigradom. Že 21. leto zapovrstjo Zveza študentskih klubov Slovenije (Zveza ŠKIS) pripravlja Škisovo tržnico, največjo kulturno-zabavno prireditev za mlade, ki temelji na promociji slovenske kulture in kulinarike, s pestrim popoldanskim ter večernim programom pa skrbi za dobro vzdušje in zabavo obiskovalcev.  57 študentskih klubov na tržnici predstavi svoje delovanje ter posebnosti in značilnosti kraja, iz katerega prihajajo.  V popoldanskem delu prireditve se obiskovalci lahko sprehodijo med klubskimi stojnicami ter spoznajo različne okuse in narečja Slovenije, se družijo in zabavajo ob odlični glasbi, predvsem pa občutijo utrip mladosti in študentskega aktivizma.  Škisova tržnica vsako leto gosti uveljavljena imena slovenske in tuje glasbene scene, priložnost pa dobijo tudi še neuveljavljene perspektivne glasbene skupine.  Pomemben del Škisove tržnice je njena mednarodna komponenta. Mladi predstavniki tujih držav so združeni na Mednarodnem otočku, kjer kulinarične dobrote in zanimivosti iz tujine predstavijo študenti iz zamejstva.  Z namenom promocije solidarnosti ter medsebojne pomoči organizatorji v kulturno-zabavno dogajanje vsako leto vnašajo dobrodelno noto. V želji po spodbujanju okoljske odgovornosti med mladimi so že pred leti pričeli tudi z ekološko usmeritvijo. Danes Škisova tržnica ni znana zgolj po svojem kulturnem in zabavnem konceptu, temveč tudi kot prva EKO prireditev za mlade v Sloveniji, ki s sprotnim ločevanjem, stiskanjem in odvažanjem odpadkov ohranja prizorišče čisto.  Prireditev se je od svoje prve upodobitve pojavila na več lokacijah po Ljubljani. Letos bodo študentski klubi svoje stojnice postavili v mesecu maju, na travnati zelenici Kardeljeve ploščadi za Bežigradom.</string>
    <string name="logo">logo</string>

    <string name="nastopajoci">Nastopajoci</string>
    <string name="festhelpSupport">FestHelp Kontakt</string>
    <string name="gumbPoslji">Pošlji</string>
    <string name="Vase_sporocilo">Vaše sporočilo:</string>
    <string name="vasEmail">Vaš email:</string>
    <string name="dnevne_aktivnosti">Dnevne aktivnosti</string>
    <string name="dnevnoDogajanje">Pestro dnevno dogajanje bo otvoril protokolarni del s tradicionalnim mimohodom študentskih klubov in uradno otvoritvijo s pozdravnimi nagovori. Popoldanski del prireditve, ki sledi uradnemu odprtju, bo poleg študentskih klubov, popestril pester spremljevalni program. Za vse pogumne smo letos pripravili novost, in sicer obratni bungee (ang. reverse bungee jumping), športni navdušenci se bodo lahko preizkusili v nogometu na milnici, študentski klubi se bodo med seboj pomerili v regijskem tekmovanju, na sedmem otočku Škisove tržnice – Mednarodnem otoku (ang. International Ocean) pa bo mogoče začutiti tudi pridih tujine.</string>
    <string name="dnevniDogodek1">slikaDnevnegaDogodka</string>
    <string name="dnevniDogodek2">slikaDnevnegaDogodka2</string>
    <string name="textDnevniDogodki2">Osrednjo nit Škisove tržnice že 21 let predstavljajo študentski klubi iz cele Slovenije, ki se v popoldanskih urah predstavijo obiskovalcem. Letos se bo na Škisovi tržnici predstavilo 57 študentskih klubov, ki zastopajo osrednjo, dolenjsko, primorsko, gorenjsko ter 02 in 03 regijo. Na stojnicah, ki so razporejene po Kardeljevi ploščadi, obiskovalcem ponujajo okusne kulinarične specialitete, pokrajinske posebnosti in običaje, ki so značilni za okolje, iz katerega prihajajo. Prav pestra kulinarična ponudba na klubskih stojnicah, je ena izmed posebnosti, s katero Škisova tržnica ohranja poseben status med študentskimi prireditvami.</string>
    <string name="dnevniDogodek3">slikaDnevnegaDogodka3</string>
    <string name="skisovaTrzina">ŠKISOVA TRŽNICA</string>
    <string name="sziget">SZIGET</string>
    <string name="ultra">ULTRA</string>
    <string name="nocneAktivnosti" />
    <string name="NocneAktivnosti">Nočne aktivnosti</string>
    <string name="oPrireditvi"><u>O PRIREDITVI</u></string>
    <string name="sponzorji"><u>SPONZORJI</u></string>
    <string name="home">Home</string>
    <string name="urnik">Urnik</string>
    <string name="mapa">Mapa</string>
    <string name="hrana">Hrana</string>
    <string name="kontakt">Kontakt</string>
    <string name="Domov">Domov</string>

</resources>
