<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/Domov">
    </item>

    <item
        android:id="@+id/nav_urnik"
        android:icon="@drawable/ic_event_note_white_24dp"
        android:title="@string/urnik">
    </item>

    <item
        android:id="@+id/nav_mapa"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/mapa">
    </item>

    <item
        android:id="@+id/nav_račun"
        android:icon="@drawable/login_icon"
        android:title="@string/racunString"></item>

    <item
        android:id="@+id/nav_kontakt"
        android:icon="@drawable/ic_email_white_24dp"
        android:title="@string/kontakt"></item>



</menu>