<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/festhelpSupport"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="36sp"
        app:fontFamily="@font/aladin" />

    <EditText
        android:id="@+id/kontaktEmailNaslov"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/vasEmail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:cursorVisible="false"/>

    <EditText
        android:id="@+id/kontaktSporocilo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/Vase_sporocilo"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:cursorVisible="false"/>

    <Button
        android:id="@+id/kontaktPoslji"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:text="@string/gumbPoslji"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>